k8s_templates/datasync_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: datasync
  name: datasync
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    run: datasync
  sessionAffinity: None
  type: ClusterIP
