k8s_templates/postgres_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: postgres
  name: postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    run: postgres
  sessionAffinity: None
  type: ClusterIP
